--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
+    "workbox-cli": "^6.1.5",
     "workbox-core": "^5.1.4",
     "workbox-expiration": "^5.1.4",
     "workbox-google-analytics": "^5.1.4",
@@ -43,7 +44,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "worbox generateSW && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
