--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
+    "workbox-build": "^6.1.5",
     "workbox-cacheable-response": "^5.1.4",
-    "workbox-cli": "^6.1.5",
     "workbox-core": "^5.1.4",
     "workbox-expiration": "^5.1.4",
     "workbox-google-analytics": "^5.1.4",
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "workbox generateSW && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -67,6 +67,7 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.3"
+    "babel-plugin-import": "^1.13.3",
+    "gulp": "^4.0.2"
   }
 }
