--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-material-ui-form-validator": "^2.1.4",
     "react-modal-sheet": "^1.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
