--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/pickers": "^3.3.10",
     "@progress/kendo-licensing": "^1.1.4",
-    "@progress/kendo-react-listview": "^4.5.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.3",
-    "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
-    "framer-motion": "^4.1.9",
+    "formik": "^2.2.6",
+    "framer-motion": "^4.1.16",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +26,7 @@
     "react-scripts": "4.0.3",
     "react-virtuoso": "^1.8.5",
     "react-window": "^1.8.6",
+    "source-map-explorer": "^2.5.2",
     "styled-components": "^5.2.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -41,9 +41,11 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
