--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.21.1",
     "formik": "^2.2.6",
     "framer-motion": "^4.1.16",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-virtuoso": "^1.8.5",
+    "react-webcam": "^5.2.4",
     "react-window": "^1.8.6",
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.2.3",
