--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "date-fns": "^2.21.1",
     "formik": "^2.2.6",
     "framer-motion": "^4.1.16",
+    "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-insta-stories": "^2.2.3",
     "react-material-ui-form-validator": "^2.1.4",
     "react-modal-sheet": "^1.3.2",
     "react-router-dom": "^5.2.0",
